# confidential_balances_microsite

./: .gitignore  README.MD
.github/workflows/: ci.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  actions.json  build-and-run.sh
backend/src/: main.rs
backend/src/errors/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: actions.rs  apply.rs  audit_transaction.rs  cb_ata.rs  create_cb_ata.rs  create_test_token.rs  decrypt.rs  deposit.rs  health.rs  memo_transaction.rs  mod.rs  reveal_elgamal_pubkey.rs  test_token.rs  transactions.rs  transfer.rs  transfer_space.rs  util.rs  withdraw.rs  withdraw_space.rs
frontend/: .editorconfig  .env.example  .eslintrc.json  .gitignore  .npmrc  .prettierignore  Makefile  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  prettier.config.cjs  prettier.config.js  tsconfig.json
frontend/.github/workflows/: test-web.yml
frontend/.storybook/: main.ts  preview.ts  storybook-fonts.css
frontend/Makefiles/: storybook.mk
frontend/app/: globals.css  layout.tsx  not-found.tsx
frontend/app/(main)/: layout.tsx  page.tsx
frontend/app/(main)/account/[address]/: page.tsx
frontend/app/(main)/auditor/: page-view.tsx  page.tsx
frontend/app/(main)/clusters/: page-view.tsx  page.tsx
frontend/app/account/: page.tsx
frontend/app/account/[address]/: page.tsx
frontend/src/app/: app.tsx  base-layout.tsx  globals.css  index.ts  layout.tsx  simple-layout.tsx  solana-provider.tsx  state-providers.tsx
frontend/src/app/providers/: solana-provider.tsx  state-providers.tsx
frontend/src/components/account/: account-data-access.tsx  account-detail-feature.tsx  account-ui.tsx
frontend/src/components/card-balance/: card-balance.stories.tsx  card-balance.tsx
frontend/src/components/card-step/: card-step.stories.tsx  card-step.tsx
frontend/src/components/cluster/: cluster-ui.tsx
frontend/src/components/dashboard/: dashboard-feature.tsx
frontend/src/components/ui/: ui-layout.tsx
frontend/src/components/ui/header/: index.tsx  logo.tsx
frontend/src/entities/account-header/: index.tsx
frontend/src/entities/dev-mode/: index.ts
frontend/src/entities/operation-log/: index.ts
frontend/src/features/: cluster-provider.tsx
frontend/src/features/audit-transaction/: index.ts
frontend/src/features/deposit-tokens/: index.ts
frontend/src/features/omni-account-header/: index.tsx
frontend/src/features/receive-tokens/: index.ts
frontend/src/features/send-tokens/: index.ts
frontend/src/features/token-account/: confidential-balances.tsx  index.ts  pending-operations.tsx  token-accounts.tsx  transaction-history.tsx
frontend/src/features/transfer-tokens/: index.ts
frontend/src/features/withdraw-tokens/: index.ts
frontend/src/pages/accounts/list/: list.tsx
frontend/src/pages/auditor/: auditor.tsx  index.ts
frontend/src/pages/clusters/: clusters.tsx  index.ts
frontend/src/pages/dashboard/: dashboard.tsx
frontend/src/shared/api/: index.ts  server-request.ts
frontend/src/shared/button/: index.tsx
frontend/src/shared/navigation/: index.ts  navigation.ts
frontend/src/shared/solana/: calculate-ui-amount.ts  cluster.ts  index.ts  rpc-config.ts  wallet.ts
frontend/src/shared/state/: index.ts  jotai.ts
frontend/src/shared/utils/: ellipsify.ts  index.ts
(+160 files in other folders)
