[package]
name = "axum-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# Solana dependencies
solana-program = "2.2.1"
spl-memo = "6.0.0"
bincode = "1.3.3" 

# Solana dependencies
solana-sdk = "2.1.11"
solana-client = "2.1.11"
solana-transaction-status-client-types = "2.1.11"
solana-zk-sdk = "2.1.11"
solana-message = "2.1.11"

# SPL dependencies
spl-token-2022 = "7.0.0" 
spl-token-client = "0.14.0" 
spl-associated-token-account = "6.0.0"
spl-token-confidential-transfer-proof-generation = "0.3.0"
spl-token-confidential-transfer-proof-extraction = "0.2.1"

# Other dependencies
tk-rs = { git = "https://github.com/kilogold/tk-rs.git" }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.1"
bs58 = "0.5.1"
dotenvy = "0.15.7"
google-cloud-kms = "0.6.0"
base64 = "0.22.1"
jito-sdk-rust = "0.1.0"
axum-macros = "0.5.0"
bytemuck = "1.20.0"
